2020-02-09  Kirit Saelensminde  <kirit@felspar.com>
 Can now set exceptions as expected outcomes from the HTTP cache.

2020-01-22  Kirit Saelensminde  <kirit@felspar.com>
 Add high level user agent with test expectation support.

2019-11-13  Kirit Saelensminde  <kirit@felspar.com>
 Added a number of configuration options for server certificate checking.

2019-11-02  Kirit Saelensminde  <kirit@felspar.com>
 Add option to verify server certificates on the network connection and force UA to use it

2019-07-17  Kirit Saelensminde  <kirit@felspar.com>
 Add a way to stop a web server instance.

2019-07-16  Kirit Saelensminde  <kirit@felspar.com>
 Joining an empty fragment does not give the same result as joining a missing fragment.

2019-05-28  Kirit Saelensminde  <kirit@felspar.com>
 Add methods for fetching out string version and JSON version of mime bodies.

2018-08-31  Kirit Saelensminde  <kirit@felspar.com>
 Allow setting a URL fragment from a jcursor.

2018-08-22  Kirit Saelensminde  <kirit@felspar.com>
 Implement a better URL join that covers many more of the required cases.

2018-08-20  Kirit Saelensminde  <kirit@felspar.com>
 Remove usernames and passwords from URLs.

2018-08-19  Kirit Saelensminde  <kirit@felspar.com>
 Rename `url::anchor` to `url::fragment` as that is the proper term.

2018-07-18  Kirit Saelensminde  <kirit@felspar.com>
 Improve handling of weird ways TCP connections can be dropped and add more logging.

2018-07-02  Kirit Saelensminde  <kirit@felspar.com>
 The HTTP response body doesn't really need to be `const`.

2018-06-11  Kirit Saelensminde  <kirit@felspar.com>
 Add `fost-hod` for handling packet oriented data over TCP.

2018-04-05  Kirit Saelensminde  <kirit@felspar.com>
 No longer make use of Boost regex library.

2017-12-28  Kirit Saelensminde  <kirit@felspar.com>
 Make the `query_string` API a bit less pathalogical by caching the stringified version.

2017-12-13  Kirit Saelensminde  <kirit@felspar.com>